--- a/views/prettyprint.pug
+++ b/views/prettyprint.pug
@@ -4,5 +4,4 @@ p Rest service
         input(type="text" name="body" id="body" placeholder="Enter body here")
     
     input(type="button", value="Make Pretty")
-    script 
-        include ../model/codelogic.js
+    script(src="/codelogic.js")
