--- a/views/prettyprint.pug
+++ b/views/prettyprint.pug
@@ -4,4 +4,4 @@ p Rest service
         input(type="text" name="body" id="body" placeholder="Enter body here")
     
     input(type="button", value="Make Pretty")
-    script(src="/codelogic.js")
+    script(src="/js/codelogic.js")
