--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,5 @@ block content
 
   p Rest service
   form(action="#{data.url}", method="post") 
-    p body
+    p Body:
     input(type="text" name="body" id="body" placeholder="Enter body here")
- 
