--- a/views/prettyprint.pug
+++ b/views/prettyprint.pug
@@ -1,7 +1,9 @@
+h1= title
+
 p Rest service
     form(action="", method="") 
         p JSON:
         input(type="text" name="body" id="body" placeholder="Enter body here")
         input(type="button", value="Make Pretty")
-        
+
     script(src="/js/codelogic.js")
