--- a/views/prettyprint.pug
+++ b/views/prettyprint.pug
@@ -3,7 +3,7 @@ h1= title
 p Rest service
     form(action="", method="") 
         p JSON:
-        input(type="text" name="body" id="body" placeholder="Enter body here")
+        textarea( name="body" id="body" placeholder="Enter body here")
         input(type="button", value="Make Pretty")
 
     script(src="/js/codelogic.js")
