--- a/views/prettyprint.pug
+++ b/views/prettyprint.pug
@@ -4,6 +4,6 @@ p Rest service
     form(action="", method="") 
         p JSON:
         textarea( name="body" id="body" placeholder="Enter body here")
-        input(type="button", value="Make Pretty")
+        input(type="button" value="Make Pretty" onclick="showTxtPrettyJSON();")
 
     script(src="/js/codelogic.js")
