added iframe and div for content

--- a/views/prettyprint.pug
+++ b/views/prettyprint.pug
@@ -5,5 +5,11 @@ p Rest service
         p JSON:
         textarea( name="body" id="body" placeholder="Enter body here")
         input(type="button" value="Make Pretty" onclick="showTxtPrettyJSON();")
-
+    br
+    br
+    div(id="jsoncontent")
+    br
+    br
+    div(id="injectedprettyprint")
+        iframe(src="https://jsonformatter.org/json-pretty-print", title="prettydisplay" height="200" width="400" frameborder="0") 
     script(src="/js/codelogic.js")
