updated iframe dimensions

--- a/views/prettyprint.pug
+++ b/views/prettyprint.pug
@@ -11,5 +11,5 @@ p Rest service
     br
     br
     div(id="injectedprettyprint")
-        iframe(src="https://jsonformatter.org/json-pretty-print", title="prettydisplay" height="200" width="400" frameborder="0") 
+        iframe(src="https://jsonformatter.org/json-pretty-print", title="prettydisplay" height="40%" width="80%" frameborder="0") 
     script(src="/js/codelogic.js")
