added block content

--- a/views/prettyprint.pug
+++ b/views/prettyprint.pug
@@ -1,16 +1,17 @@
 extends layout
 
-h1= title
+block content
+    h1= title
 
-form(action="", method="") 
-    p(class="form-label") Text with slashes:
-    textarea( name="body" id="body" class="form-control" placeholder="Enter body here")
-    input(type="button" value="Make Pretty" class="btn btn-dark" onclick="showTxtPrettyJSON();")
-br
-br
-div(id="jsoncontent")
-br
-br
-div(id="injectedprettyprint")
-    iframe(src="https://jsonformatter.org/json-pretty-print", title="prettydisplay" height="40%" width="80%" frameborder="0") 
-script(src="/js/codelogic.js")
+    form(action="", method="") 
+        p(class="form-label") Text with slashes:
+        textarea( name="body" id="body" class="form-control" placeholder="Enter body here")
+        input(type="button" value="Make Pretty" class="btn btn-dark" onclick="showTxtPrettyJSON();")
+    br
+    br
+    div(id="jsoncontent")
+    br
+    br
+    div(id="injectedprettyprint")
+        iframe(src="https://jsonformatter.org/json-pretty-print", title="prettydisplay" height="40%" width="80%" frameborder="0") 
+    script(src="/js/codelogic.js")
