--- a/views/prettyprint.pug
+++ b/views/prettyprint.pug
@@ -14,5 +14,5 @@ block content
     br
     br
     div(id="injectedprettyprint")
-        iframe(src="https://jsonformatter.org/json-pretty-print", title="prettydisplay" height="70%" width="80%" frameborder="0") 
+        iframe(src="https://jsonformatter.org/json-pretty-print", title="prettydisplay" height="400" width="80%" frameborder="0") 
     script(src="/js/codelogic.js")
