corrected authentication using tba to trox

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,11 +12,11 @@ html
       div(class="nav-bg")
       ul 
         li 
-          a(href="#") Home 
+          a(href="/") Home 
         li 
-          a(href="#") Request
+          a(href="/request") Request
         li 
-          a(href="#") Pretty Print
+          a(href="/prettyprint") Pretty Print
 
     block content
     
