--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -35,7 +35,7 @@ nav ul li {
 nav a {
   width: 100%;
   height: 100%;
-  color: white;
+  color: black;
   text-decoration: none;
   font-family: Ubuntu;
   font-size: 1.15em;
