--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,7 +81,7 @@ h1 {
   width: 100%;
   height: 500px;
   background: rgb(50, 50, 50);
-  background: url(https://doninmass.files.wordpress.com/2013/04/walking-in-rain-painting-wallpaper-hd.jpg) no-repeat 50% 50% fixed;
+  background: url(https://img.freepik.com/free-photo/abstract-luxury-plain-blur-grey-black-gradient-used-as-background-studio-wall-display-your-products_1258-63752.jpg?t=st=1645117434~exp=1645118034~hmac=6c7a1864c7c1f446a8c4774cc493b649ed454c1bec4186bde9d27dba520462d5&w=1800) no-repeat 50% 50% fixed;
   background-size: 130%;
   overflow: hidden;
 }
