--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,8 +78,9 @@ h1 {
 
 .hero {
   position: relative;
-  width: 100%;
+  width: 110%;
   height: 500px;
+  margin-left: -100px;
   background: rgb(50, 50, 50);
   background: url(https://img.freepik.com/free-photo/abstract-luxury-plain-blur-grey-black-gradient-used-as-background-studio-wall-display-your-products_1258-63752.jpg?t=st=1645117434~exp=1645118034~hmac=6c7a1864c7c1f446a8c4774cc493b649ed454c1bec4186bde9d27dba520462d5&w=1800) no-repeat 50% 50% fixed;
   background-size: 130%;
@@ -97,9 +98,10 @@ h1 {
 }
 
 .content-wrapper {
-  width: 100%;
+  width: 120%;
   height: 3000px;
   padding: 1em 10%;
+  margin-left: -200px;
 }
 
 .content-wrapper h1 {
