upgraded interface to make easier requests

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,9 @@ html
         li 
           a(href="/request") Request
         li 
-          a(href="/prettyprint") Pretty Print
+          a(href="/prettyprint") JSON Pretty Print
+        li
+          a(href="/xmlpp") XML Pretty Print
 
     block content
     
