--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,51 @@
 extends layout
 
 block content
-  h1= title
-  p  
-  p received: #{data} in url
+    div(class="hero") 
+        h1= title
+    
+    div(class="content-wrapper")
+        form(action="", method="") 
+            p(class="form-label") Organization ID:
+            input(type="text", id="organizationid" class="form-control" placeholder="Enter organization id here")
+            br
+            p(class="form-label") Script number:
+            input(type="text", id="scriptnumber" class="form-control" placeholder="Enter script number here")
+            br
+            p(class="form-label") Deploy number:
+            input(type="text", id="deploynumber" class="form-control" placeholder="Enter deploy number here")
+            br
+            p(class="form-label") Method:
+            select(id="method" class="form-select")
+                option(value="POST") POST 
+                option(value="GET") GET 
+            br
+            br
+            div(class="form-check form-switch")
+                input(type="checkbox" id="tba" class="form-check-input" onclick="enableNSInstance(this);") 
+                label(class="form-check-label" for="tba") Netsuite Instance:
+            br
+            select(id="netsuite_instance" class="form-select" disabled="true")
+                option(value="Trox") Troxell 
+                option(value="JDGroup") JD Group 
+            br
+            br
+            p(class="form-label") Body:
+            textarea( name="json" id="json" class="form-control" placeholder="Parameter json")
+            br
+            input(type="button" value="Request" class="btn btn-dark" onclick="Request();")
+            br
+            br
+            p(class="form-label") Text with slashes:
+            textarea( name="body" id="body" class="form-control" placeholder="Enter response with slashes here")
+            br
+            input(type="button" id="makepretty" value="Make Pretty" class="btn btn-dark" onclick="showTxtPrettyJSON();")
+        br
+        br
+        div(id="jsoncontent")
+        br
+        br
+        div(id="injectededi")
+            iframe(src="https://jsonformatter.org/json-pretty-print", title="prettydisplay" height="600" width="80%" frameborder="0") 
 
-  p Rest service
-  form(action="#{data.url}", method="post") 
-    p Body:
-    input(type="text" name="body" id="body" placeholder="Enter body here")
+    script(src="/js/codelogic.js")
