fixed connection to trox sandbox, fixed reading environment variables, added environment variables for trox production

--- a/views/index.pug
+++ b/views/index.pug
@@ -26,7 +26,8 @@ block content
                 label(class="form-check-label" for="tba") Netsuite Instance:
             br
             select(id="netsuite_instance" class="form-select" disabled="true")
-                option(value="Trox") Troxell 
+                option(value="Trox_S") Bluum - Sandbox  
+                option(value="Trox_P") Bluum - Production  
                 option(value="JDGroup") JD Group 
             br
             br
